# sokketter

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  Build.py  CHANGELOG.md  CMakeLists.txt  ConvenienceDefinitions.cmake  Environment.py  IncrementProjectVersion.py  ProjectVersion.cmake  ProjectVersion.py  README.md  ThirdPartyFetch.cmake  get_coverage.sh  version.rc.in
.github/workflows/: cmake-build-artifacts.yml  cmake-build-only.yml  cmake-build-release.yml
libsokketter/: CMakeLists.txt
libsokketter-test-app/: CMakeLists.txt  main.cpp
libsokketter/include/: export_definitions.h  libsokketter.h
libsokketter/sources/: core.cpp  core.h  database_storage.cpp  database_storage.h  libsokketter.cpp  sokketter_core.cpp  sokketter_core.h  sokketter_initializer.cpp  sokketter_initializer.h
libsokketter/sources/devices/: energenie_eg_base.cpp  energenie_eg_base.h  energenie_eg_pms.cpp  energenie_eg_pms.h  energenie_eg_pms2.cpp  energenie_eg_pms2.h  energenie_eg_pmx_x.cpp  energenie_eg_pmx_x.h  energenie_eg_pmxx_lan.cpp  energenie_eg_pmxx_lan.h  gembird_msis_pm.cpp  gembird_msis_pm.h  gembird_msis_pm_2.cpp  gembird_msis_pm_2.h  gembird_sis_pm.cpp  gembird_sis_pm.h  power_strip_base.cpp  power_strip_base.h  power_strip_factory.cpp  power_strip_factory.h  test_device.cpp  test_device.h
sokketter-cli/: CMakeLists.txt
sokketter-cli/sources/: cli_parser.cpp  cli_parser.h  main.cpp
sokketter-cli/tests/: CMakeLists.txt  test_arguments.cpp  test_general.cpp  test_options.cpp  test_subcommands.cpp  tst_arguments.cpp
sokketter-cmd/: CMakeLists.txt  main.cpp
sokketter-ui/: CMakeLists.txt
sokketter-ui/resources/: Info.plist  Info.plist.in  resources.qrc  resources.rc  sokketter-ui.desktop
sokketter-ui/resources/icons/: generate_icns_file.sh  socket-icon.icns
sokketter-ui/sources/: app_logger.cpp  app_logger.h  app_settings.cpp  app_settings.h  app_settings_storage.cpp  app_settings_storage.h  empty_power_strip_list_item.cpp  empty_power_strip_list_item.h  empty_power_strip_list_item.ui  license_dialog.cpp  license_dialog.h  license_dialog.ui  macos_theme_change_detection.h  macos_theme_change_detection.mm  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  power_strip_list_item.cpp  power_strip_list_item.h  power_strip_list_item.ui  socket_list_item.cpp  socket_list_item.h  socket_list_item.ui  theme_stylesheets.h  windows_titlebar_theme.cpp  windows_titlebar_theme.h
sokketter-ui/sources/Qt/: BoldLabel.cpp  BoldLabel.h  ButtonLabel.cpp  ButtonLabel.h  DeviceEditForm.cpp  DeviceEditForm.h  DeviceEditForm.ui  ElidingLabel.cpp  ElidingLabel.h  Header2Label.cpp  Header2Label.h  HeaderLabel.cpp  HeaderLabel.h  HoverableListWidget.cpp  HoverableListWidget.h  PixelScrollListWidget.cpp  PixelScrollListWidget.h  SocketEditForm.cpp  SocketEditForm.h  SocketEditForm.ui  SocketListItem.cpp  SocketListItem.h  SocketListItem.ui  SubheaderLabel.cpp  SubheaderLabel.h  Title2Label.cpp  Title2Label.h  TitleLabel.cpp  TitleLabel.h
udev-rules/: 101-sokketter.rules  install-udev-rules.sh
